--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-av": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-image-picker": "~8.0.1",
     "expo-network": "^2.0.0",
     "expo-permissions": "~8.0.0",
+    "expo-video-player": "^1.5.7",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
@@ -40,7 +42,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.0.14",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "@react-native-community/netinfo": "4.6.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
