--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/netinfo": "4.6.0",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-av": "~8.0.0",
@@ -31,6 +32,7 @@
     "react-native-image-gallery": "^2.1.5",
     "react-native-image-page": "^0.5.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-map-link": "^2.7.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-responsive-screen": "^1.3.1",
     "react-native-safe-area-context": "^0.6.0",
@@ -42,8 +44,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.0.14",
-    "react-navigation-tabs": "^2.7.0",
-    "@react-native-community/netinfo": "4.6.0"
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
