--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "react-native-elements": "^1.2.7",
     "react-native-fb-image-grid": "0.0.3",
     "react-native-gallery-swiper": "^1.25.2",
-    "react-native-gesture-handler": "^1.5.3",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-image-gallery": "^2.1.5",
     "react-native-image-page": "^0.5.0",
     "react-native-indicators": "^0.17.0",
     "react-native-map-link": "^2.7.3",
+    "react-native-modalize": "^2.0.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-responsive-screen": "^1.3.1",
     "react-native-safe-area-context": "^0.6.0",
