--- a/package.json
+++ b/package.json
@@ -8,47 +8,47 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.6",
-    "@react-native-community/netinfo": "4.6.0",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/netinfo": "5.5.1",
     "axios": "^0.19.2",
-    "expo": "~36.0.0",
-    "expo-av": "~8.0.0",
-    "expo-constants": "~8.0.0",
-    "expo-image-picker": "~8.0.1",
-    "expo-network": "^2.0.0",
-    "expo-permissions": "~8.0.0",
+    "expo": "^37.0.0",
+    "expo-av": "~8.1.0",
+    "expo-constants": "~9.0.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-network": "~2.1.0",
+    "expo-permissions": "~8.1.0",
     "expo-video-player": "^1.5.7",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-grid-gallery": "^0.5.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-customized-image-picker": "^0.1.11",
     "react-native-elements": "^1.2.7",
     "react-native-fb-image-grid": "0.0.3",
     "react-native-gallery-swiper": "^1.25.2",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-image-gallery": "^2.1.5",
     "react-native-image-page": "^0.5.0",
     "react-native-indicators": "^0.17.0",
     "react-native-map-link": "^2.7.3",
     "react-native-modalize": "^2.0.3",
-    "react-native-reanimated": "^1.4.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-responsive-screen": "^1.3.1",
-    "react-native-safe-area-context": "^0.6.0",
-    "react-native-screens": "^2.0.0-alpha.32",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-super-grid": "^3.1.2",
     "react-native-thumbnail-grid": "^0.3.0",
     "react-native-video": "^5.0.2",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.0.14",
     "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
+    "babel-preset-expo": "^8.1.0",
     "@babel/core": "^7.0.0"
   },
   "private": true
