--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "buildAndroid": "expo build:android -t apk",
+    "buildAndroidBundle": "expo build:android -t app-bundle"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
